--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.9"
   },
   "scripts": {
     "start": "react-scripts start",
